force-app/main/default/objects/FSM_CMDTLevel1__mdt/FSM_CMDTLevel1__mdt.object-meta.xml
<CustomObject>
    <label>CMDT Level 1</label>
    <pluralLabel>CMDT Level 1s</pluralLabel>
</CustomObject>