force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>FSM_BusinessUnit__c</fullName>
    <label>FSM Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer Services</fullName>
                <default>true</default>
                <label>Developer Services</label>
            </value>
            <value>
                <fullName>Green Recovery</fullName>
            </value>
            <value>
                <fullName>Metering</fullName>
            </value>
            <value>
                <fullName>Virtual DST</fullName>
            </value>
            <value>
                <fullName>Waste Infra</fullName>
            </value>
            <value>
                <fullName>Waste Non Infra</fullName>
            </value>
            <value>
                <fullName>Water Infra</fullName>
            </value>
            <value>
                <fullName>Water Non Infra</fullName>
            </value>
            <value>
                <fullName>Bio Resource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>