force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_CodeGroup__c.field-meta.xml
<CustomField>
    <fullName>FSM_CodeGroup__c</fullName>
    <label>Code Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>