force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_EnableActionScreen__c.field-meta.xml
<CustomField>
    <fullName>FSM_EnableActionScreen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Action Screen</label>
    <type>Checkbox</type>
</CustomField>