force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_EnableImpactScreen__c.field-meta.xml
<CustomField>
    <fullName>FSM_EnableImpactScreen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Impact Screen</label>
    <type>Checkbox</type>
</CustomField>