force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_EnableProblemScreen__c.field-meta.xml
<CustomField>
    <fullName>FSM_EnableProblemScreen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Problem Screen</label>
    <type>Checkbox</type>
</CustomField>