force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_MandatoryActionScreen__c.field-meta.xml
<CustomField>
    <fullName>FSM_MandatoryActionScreen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory Action Screen</label>
    <type>Checkbox</type>
</CustomField>