force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_MandatoryImpactScreen__c.field-meta.xml
<CustomField>
    <fullName>FSM_MandatoryImpactScreen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory Impact Screen</label>
    <type>Checkbox</type>
</CustomField>