force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_MandatoryProblemScreen__c.field-meta.xml
<CustomField>
    <fullName>FSM_MandatoryProblemScreen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory Problem Screen</label>
    <type>Checkbox</type>
</CustomField>