force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_OnComplete__c.field-meta.xml
<CustomField>
    <fullName>FSM_OnComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Complete</label>
    <type>Checkbox</type>
</CustomField>