force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_OnSuspend__c.field-meta.xml
<CustomField>
    <fullName>FSM_OnSuspend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Suspend</label>
    <type>Checkbox</type>
</CustomField>