force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_PIACode__c.field-meta.xml
<CustomField>
    <fullName>FSM_PIACode__c</fullName>
    <label>PIA Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>