force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_RejectionCategory__c.field-meta.xml
<CustomField>
    <fullName>FSM_RejectionCategory__c</fullName>
    <label>Rejection Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Availability</fullName>
                <default>true</default>
                <label>Availability</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>H&amp;S</fullName>
            </value>
            <value>
                <fullName>Plant/Equipment/Vehicle</fullName>
            </value>
            <value>
                <fullName>Preparation</fullName>
            </value>
            <value>
                <fullName>Asset Data</fullName>
            </value>
            <value>
                <fullName>Asset Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>