force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_RejectionCategoryText__c.field-meta.xml
<CustomField>
    <fullName>FSM_RejectionCategoryText__c</fullName>
    <description>Dynamic choice isnt supported in FSL mobile flow, so created this field. It a copy of Rejection Category Picklist field</description>
    <label>Rejection Categrory Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>