force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_SAPName__c.field-meta.xml
<CustomField>
    <fullName>FSM_SAPName__c</fullName>
    <label>SAP Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>