force-app/main/default/objects/FSM_CMDTLevel1__mdt/fields/FSM_WorkCenter__c.field-meta.xml
<CustomField>
    <fullName>FSM_WorkCenter__c</fullName>
    <label>WorkCenter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>