force-app/main/default/objects/FSM_CMDTLevel1__mdt/listViews/CMDT_1_Suspension.listView-meta.xml
<ListView>
    <fullName>CMDT_1_Suspension</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>FSM_BusinessUnit__c</columns>
    <columns>FSM_SuspendCategory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSM_Type__c</field>
        <operation>equals</operation>
        <value>Suspension</value>
    </filters>
    <label>CMDT_1_Suspension</label>
</ListView>